[package]
name = "yew-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
gloo-file = { version = "0.2.3", features = ["futures"] }
gloo-utils = "0.1.6"
semdoc = { version = "0.0.1", path = "../engine" }
web-sys = { version = "0.3.61", features = ["HtmlInputElement", "File", "FileList", "Window", "Location", "HtmlStyleElement", "Document", "HtmlHeadElement"] }
yew = { version = "0.20.0", features = ["csr"] }
